<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Quiz">

    <Button
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:height="40dp"
        android:text="@string/option"
        app:layout_constraintBottom_toBottomOf="@+id/option3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/option3" />

    <Button
        android:id="@+id/option2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:height="40dp"
        android:text="@string/option"
        app:layout_constraintBaseline_toBaselineOf="@+id/option1"
        app:layout_constraintEnd_toStartOf="@+id/option3"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/option1" />

    <Button
        android:id="@+id/option3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="81dp"
        android:height="40dp"
        android:text="@string/option"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/quiz_current"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/option"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/playedCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/played"
        app:layout_constraintBottom_toTopOf="@+id/wonCounter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_current" />

    <TextView
        android:id="@+id/wonCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/won"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playedCounter" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@+id/quiz_current"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/timer"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressTint="@color/red"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="279dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_current" />

</androidx.constraintlayout.widget.ConstraintLayout>